<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:gravity="center">

            <ImageView
                android:id="@+id/fragment_login_iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/sign_user_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/image_user_defult" />

                <EditText
                    android:id="@+id/fragment_login_et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/sign_user_icon"
                    android:background="@null"
                    android:hint="@string/fragment_login_code_hint"
                    android:singleLine="true"
                    android:textColorHint="#666666"
                    android:textSize="@dimen/tv_middle" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/sign_user_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/pass_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/image_password" />

                <EditText
                    android:id="@+id/fragment_login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/pass_icon"
                    android:background="@null"
                    android:hint="@string/fragment_login_password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="#666666"
                    android:textSize="@dimen/tv_middle" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/pass_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/fragment_login_cb_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/fragment_login_remember_password"
                    android:textColor="@color/c6" />

                <CheckBox
                    android:id="@+id/fragment_login_cb_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/fragment_login_remember_auto"
                    android:textColor="@color/c6" />

            </RelativeLayout>


            <Button

                android:id="@+id/fragment_login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/login_btn_blue"
                android:text="@string/fragment_login_login"
                android:textColor="#ffffff"
                android:textSize="@dimen/tv_large" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center">

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_login_tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/fragment_login_register"
                    android:textColor="#00579E"
                    android:textSize="@dimen/tv_small" />

                <ImageView
                    android:id="@+id/line"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/fragment_login_tv_register"
                    android:background="#828282" />

                <TextView
                    android:id="@+id/fragment_login_tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/line"
                    android:text="@string/fragment_login_forget"
                    android:textColor="#00579E"
                    android:textSize="@dimen/tv_small" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>


