<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragment_mine_ll_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.knight.helper.view.CircleImageView
                    android:id="@+id/fragment_mine_iv_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/image_user_default" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_mine_tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="名字"
                        android:textColor="@color/c3"
                        android:textSize="@dimen/tv_large" />

                    <TextView
                        android:id="@+id/fragment_mine_tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="邮箱"
                        android:textColor="@color/c3"
                        android:textSize="@dimen/tv_middle" />

                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/image_right" />
            </RelativeLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_mine_ll_setting"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center_vertical">

                <ImageView
                    android:background="@color/light_blue"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:textSize="@dimen/tv_middle"
                    android:textColor="@color/c3"
                    android:text="@string/fragment_mine_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <RelativeLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/image_right" />

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_mine_ll_about"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center_vertical">

                <ImageView
                    android:background="@color/blue"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:textSize="@dimen/tv_middle"
                    android:textColor="@color/c3"
                    android:text="@string/fragment_mine_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <RelativeLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/image_right" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <!--android:background="@drawable/exit_login"-->

            <TextView
                android:id="@+id/fragment_mine_tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@mipmap/image_yuanjiao_red"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/fragment_mine_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_middle" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>